# nmea

./: .bazelrc  .clang-tidy  .gitignore  LICENSE  MODULE.bazel  README.md
example/: BUILD  main.cpp
nmea/: BUILD  nmea.cpp  nmea.h
test/: BUILD  smoke_test.cpp
